Fix ToggleOverflow svgs bug

--- a/src/components/ThemeToggle/index.module.scss
+++ b/src/components/ThemeToggle/index.module.scss
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   user-select: none;
+  overflow: hidden;
 
   input {
     width: 0;
